# rocky-ide-bridge

./: .gitignore  README.md  RUNNING_GUIDE.md  manual_boot.bat  package-lock.json  shutdown_rocky.bat  start_rocky.bat  start_rocky_test.bat  tasks.csv
backend/: .env.example  Quantum_Architect_v3_Blueprint.md  TROUBLESHOOTING.md  clean.js  diagnose.js  hello_from_langgraph.txt  jest.config.js  nodemon.json  package-lock.json  package.json  testCrew.js  test_god_mode.js  test_ngrok.js  tmp_check.js  tmp_check_architect_logs.js  tmp_check_db.js  tmp_check_dom.js  tmp_check_logs_email.js  tmp_check_memory.js  tmp_check_memory_email.js  tmp_find_project.js  tmp_list_cleanup_projects.js  tmp_list_goals.js  tmp_list_logs.js  tmp_run_architect_debug.js  tmp_run_architect_debug_v2.js  tmp_save_memory.js  tmp_test_graph.js  tmp_test_mcp.js  tmp_test_read.js  tmp_test_tg.js  tmp_test_wait.js  trigger_architect.js  verifyIntel.js
backend/scratch/: check_tg.js  db_dump.json  get_goal_details.js  get_latest_goals.js  get_logs.js  get_tg_id.js  list_models.js  test_gemini.js  test_launch.js
backend/scripts/: cleanup.js
backend/src/: index.js  mcp_server.js
backend/src/agents/: agentEngine.js  architect.js  cdpBridge.js  graphEngine.js  handoff.js  healer.js  rockyGraph.js  tools.js
backend/tests/: health.test.js
crew_test/: README.md  pyproject.toml
crew_test/src/crew_test/: crew.py  main.py
docs/: TESTING_GUIDE.md
mobile-app/: app.json  package-lock.json  package.json
mobile-app/app/: _layout.jsx  index.jsx  setup.jsx
scratch/: test_cdp.js
(+41 files in other folders)
